# pytest-drf

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  _tox_install_command.sh  manage.py  pyproject.toml  pytest.ini  tox.ini
pytest_drf/: __init__.py  authentication.py  authorization.py  client.py  fixtures.py  pagination.py  plugin.py  status.py  views.py
pytest_drf/util/: __init__.py  expressions.py  metaclasses.py  urls.py
tests/: conftest.py  test_pytest.py
tests/example_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/example_project/views/: authentication.py  pagination.py  views.py
tests/pytest_drf/: test_authentication.py  test_authorization.py  test_pagination.py  test_status.py  test_views.py
tests/testapp/: models.py  urls.py
tests/testapp/views/: authorization.py  status.py  views.py
