[tool.poetry]
name = "pytest-drf"
version = "0.1.0"
description = "A Django REST framework plugin for pytest."
authors = ["Zach \"theY4Kman\" Kanzler <they4kman@gmail.com>"]
license = "MIT"
url = "https://github.com/theY4Kman/pytest-drf"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

djangorestframework = ">3"
inflection = "^0.3.1"
pytest = ">=3.6"
pytest-assert-utils = "^0.1.0"
pytest-common-subject = "^1.0"
pytest-lambda = "^1.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.0"

[tool.poetry.plugins."pytest11"]
fixture_order = "pytest_drf.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
